--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kokomo
 description: A happy and healthy in-browser text editor.
-baseurl: ""
+baseurl: "/kokomo"
 url: "https://semishawn.github.io"
 github_username: semishawn
